--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@ build/
 npm-debug.log*
 yarn-error.log*
 .DS_Store
+
+#ignoro las fotos de archivos temporales de mi proyecto de usuarios
+backend/uploads/*
+!backend/uploads/.gitkeep
